# qimen

./: README.md
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-ui.yaml  hpa.yaml  ingress.yaml  service-api.yaml  service-ui.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
qimen/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
qimen/src/: args.rs  error.rs  gan.rs  lib.rs  main.rs  men.rs  request.rs  routers.rs  shen.rs  star.rs  swagger.rs
qimen/src/handlers/: healthz.rs  mod.rs
ui/: .dockerignore  .gitignore  Dockerfile  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
ui/src/: global.scss  index.html
ui/src/app/: app-routing.module.ts
ui/src/app/enum/: gan.ts  gua.ts  men.ts
ui/src/app/interface/: request-data.ts  response.ts
ui/src/app/qimen/: qimen-routing.module.ts  qimen.module.ts  qimen.page.html  qimen.page.spec.ts  qimen.page.ts
ui/src/app/qimen/house/: house.component.html  house.component.scss  house.component.ts
ui/src/app/qimen/pan/: pan.component.html  pan.component.scss  pan.component.ts
ui/src/app/services/api/: api.service.ts
ui/src/app/services/house-click/: house-click.service.ts
ui/src/app/services/qimen_storage/: qiemn_storage.service.ts
