[package]
name = "qimen"
version = "0.1.0"
edition = "2021"


[features]
swagger = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "horo_date_time/swagger",
    "lunar_calendar/swagger",
    "ganzhiwuxing/swagger",
]
cors = ["dep:actix-cors"]

[dependencies]
ganzhiwuxing = { git = "https://github.com/wlhyl/ganzhiwuxin.git", branch = "rust" }
rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }
lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch = "rust", features = [
    "serde",
] }

horo_date_time = { git = "https://github.com/wlhyl/horo.git", features = [
    "serde",
] }

actix-cors = { version = "0.7.0", optional = true }
actix-web = "4.8.0"
clap = { version = "4.5.9", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.21"
log4rs = "1.3.0"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"                                 # bin/a.rs需要

# swagger
utoipa = { version = "4.2.3", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "7.1.0", features = [
    "actix-web",
], optional = true }

# 验证
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive", "unic"] }
